Fix: Moved spacing into content-spacing.css

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -20,6 +20,7 @@ to decide colors
 */
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+@import url(content-spacing.css);
 
 .mono {
     font-family: 'Roboto Mono', monospace !important;
@@ -154,9 +155,9 @@ to decide colors
     --docs_spacing_10: 120px;
 
     --docs_font_size_h1: 1.75rem;
-    --docs_font_size_h2: 1.375rem;
-    --docs_font_size_h3: 1.125rem;
-    --docs_font_size_h4: 1rem;
+    --docs_font_size_h2: 1.5rem;
+    --docs_font_size_h3: 1.375rem;
+    --docs_font_size_h4: 1.125rem;
 
     --ch-scrollycoding-sticker-width: 600px;
     --ch-scrollycoding-code-min-height: 62vh;
@@ -248,7 +249,7 @@ ol {
     margin-bottom: 16px;
     font-size: 0.938rem;
     font-weight: 400;
-    line-height: 1.5rem;
+    line-height: 1.625rem;
 }
 
 .note p {
@@ -387,15 +388,14 @@ h6 {
     display: inline-block;
     width: 100%;
     position: relative;
-    margin: 16px 0;
+    margin: 0px;
     color: var(--docs_text_primary);
 }
 
 h1 {
     font-size: var(--docs_font_size_h1);
     margin-top: 40px;
-    margin-bottom: 16px;
-    letter-spacing: -0.025rem;
+    letter-spacing: -0.25px;
     line-height: 2rem;
     font-weight: 700;
 }
@@ -403,25 +403,24 @@ h1 {
 h2 {
     font-size: var(--docs_font_size_h2);
     margin-top: 16px;
-    margin-bottom: 16px;
     line-height: 1.5rem;
-    letter-spacing: 0.02rem;
+    letter-spacing: -0.25px;
     font-weight: 700;
 }
 
 h3 {
     font-size: var(--docs_font_size_h3);
     line-height: 1.5rem;
-    margin: 16px 0;
-    letter-spacing: 0.02rem;
+    margin-top: 16px;
+    letter-spacing: 0px;
     font-weight: 600;
 }
 
 h4 {
     font-size: var(--docs_font_size_h4);
     line-height: 1.5rem;
-    margin: 16px 0;
-    letter-spacing: 0.02rem;
+    margin-top: 16px;
+    letter-spacing: 0px;
     font-weight: 600;
 }
 
@@ -562,10 +561,6 @@ pre+h2 {
     margin-top: 16px;
 }
 
-.note {
-    margin: 16px 0 !important;
-}
-
 .note+h2 {
     margin-top: 32px;
 }
@@ -612,21 +607,22 @@ blockquote :global(*:last-child) {
     border: 1px solid var(--border_default);
     background: var(--surface_default);
     padding: 8px 8px;
-    transition: background-color 100ms ease-in-out; /* Add a transition effect to the background-color property */
-  }
-  
-  .docs-search-bar:hover {
-    cursor: pointer;
-  }
+    transition: background-color 100ms ease-in-out;
+    /* Add a transition effect to the background-color property */
+}
 
-  .hot-key {
+.docs-search-bar:hover {
+    cursor: pointer;
+}
+
+.hot-key {
     margin-left: auto !important;
     border-radius: var(--docs_border_radius_xs);
     padding: 0 8px;
     color: var(--docs_text_primary);
     border: 1px solid var(--docs_border_strong);
 }
-  
+
 
 table {
     margin-bottom: 2rem;
@@ -978,16 +974,17 @@ h4:hover .copy-anchor:active {
     font-weight: 600;
     border-radius: 8px;
 }
+
 .sidebar-section .sidebar-section {
-    margin-left: -1px!important;
+    margin-left: -1px !important;
 }
 
 .sidebar-section .sidebar-section .opaque-link {
-    margin-left: 15px!important;
+    margin-left: 15px !important;
 }
 
 .sidebar-section .sidebar-section .sidebar-section {
-    margin-left: 15px!important;
+    margin-left: 15px !important;
 }
 
 .dropdown-chevron-container {
@@ -1370,10 +1367,12 @@ div#hs-eu-cookie-confirmation div#hs-eu-cookie-confirmation-inner a#hs-eu-cookie
         gap: 32px;
         margin-bottom: 24px;
     }
+
     .page {
         top: 2.5rem;
         width: 100vw;
     }
+
     .hide-before-768 {
         display: none !important;
     }
@@ -1430,12 +1429,12 @@ ais-highlight-0000000000 {
     font-weight: 400;
 }
 
-.syntax-light{
+.syntax-light {
     display: var(--display-light);
 }
 
 .syntax-dark {
-  display: var(--display-dark);
+    display: var(--display-dark);
 }
 
 /* Prevents auto zoom for mobile browsers */
@@ -1448,7 +1447,7 @@ ais-highlight-0000000000 {
 
 @media only screen and (max-width: 1024px) {
     .hide-before-1024 {
-       display: none;
+        display: none;
     }
 }
 
@@ -1504,6 +1503,7 @@ ais-highlight-0000000000 {
         display: none;
     }
 }
+
 @media screen and (max-width: 600px) {
     .search-modal {
         width: 90%;
